--- a/productService/package.json
+++ b/productService/package.json
@@ -14,7 +14,8 @@
     "@aws-sdk/util-dynamodb": "^3.540.0",
     "@middy/core": "^3.4.0",
     "@middy/http-json-body-parser": "^3.4.0",
-    "aws-sdk": "^2.1589.0"
+    "aws-sdk": "^2.1589.0",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@serverless/typescript": "^3.0.0",
@@ -29,9 +30,11 @@
     "json-schema-to-ts": "^1.5.0",
     "serverless": "^3.0.0",
     "serverless-auto-swagger": "^2.12.0",
+    "serverless-aws-documentation": "^1.1.0",
     "serverless-dynamodb-local": "^0.2.40",
     "serverless-esbuild": "^1.23.3",
     "serverless-offline": "^13.3.3",
+    "serverless-reqvalidator-plugin": "^3.1.0",
     "serverless-webpack": "^5.13.0",
     "ts-jest": "^29.1.2",
     "ts-loader": "^9.5.1",
