--- a/productService/package.json
+++ b/productService/package.json
@@ -26,6 +26,7 @@
     "esbuild": "^0.14.11",
     "fork-ts-checker-webpack-plugin": "^9.0.2",
     "jest": "^29.7.0",
+    "jest-dynalite": "^3.6.1",
     "jest-mock-extended": "^3.0.5",
     "json-schema-to-ts": "^1.5.0",
     "serverless": "^3.0.0",
